--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==1.10.6
-requests==2.13.0
-gunicorn==19.6.0
-whitenoise==3.3.0
-APScheduler==3.0.0
-psycopg2==2.7.1
+django>=1.11.18
+requests>=2.20.0
+gunicorn
+whitenoise
+APScheduler
+psycopg2
+
